--- a/public/style.css
+++ b/public/style.css
@@ -1,42 +1,57 @@
-/****** Main Styling ******/
-
 body {
-  font-family: 'Roboto', sans-serif;
-  font-size: 16px;
-  color: #222;
-  background-color: #ECF0F1;
-  text-align: center;
+  font-family: "Urbanist", sans-serif;
+  color: white;
+  background: #1E1E1E;
+  margin: 0;
 }
 
 .container {
   padding: 0;
-  margin-top: 40px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
+.container h1 {
+  text-transform: uppercase;
+}
+.container h1, .container h2 {
+  color: #CE9178;
+}
+.container .center {
+  text-align: center;
+}
+.container .flex-column {
+  display: flex;
+  margin: 0 auto;
+  flex-direction: column;
+  justify-content: center;
+}
+.container form #button {
+  background-color: #9CDCFE;
+  padding: 10px;
+  border: none;
+  border-radius: 20px;
+  transition: 300ms linear;
+}
+.container form #button:hover {
+  opacity: 0.6;
+}
+.container code {
+  display: inline-block;
+  font-family: "Courier New", monospace;
+  font-size: 14px;
+  padding: 10px;
+  background-color: #1E1E1E;
+  color: white;
+  text-align: left;
+  width: 350;
+  line-height: 20px;
+}
+.container code .property-values {
+  color: #CE9178;
+}
+.container code .object-keys {
+  color: #9CDCFE;
 }
 
-.footer {
-  margin-top: 60px;
-}
-
-a {
-  color: #2574A9;
-}
-
-input {
-  display: block;
-  position: relative;
-  margin: 10px auto;
-}
-
-input#button {
-  width: 230px;
-}
-
-.view {
-  position:relative;
-  margin: auto;
-  margin-top: 40px;
-  border: 1px  solid  #aaa;
-  padding: 20px;
-  width: 60%;
-  min-width: 400px;
-}
+/*# sourceMappingURL=style.css.map */
