--- a/views/index.html
+++ b/views/index.html
@@ -6,31 +6,25 @@
 	<title>File Metadata</title>
 	<link rel="shortcut icon" href="https://cdn.freecodecamp.org/universal/favicons/favicon-32x32.png"
 		type="image/x-icon" />
-	<link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet" type="text/css">
-	<link href="/public/style.css" rel="stylesheet" type="text/css">
+	<link href="https://fonts.googleapis.com/css?family=Urbanist:wght@300&display=swap" rel="stylesheet" type="text/css">
+	<link href="style.css" rel="stylesheet" type="text/css">
 </head>
 
 <body>
 	<div class="container">
-		<h2>API Project: File Metadata Microservice</h2>
+		<h1 class="center">API Project: File Metadata Microservice</h1>
 
-		<h3>Usage:</h3>
-		<p>
-			Please Upload a File ...
-		</p>
-		<div class="view">
-			<h4 id="output"></h4>
+		
+		<h2 class="center">Usage</h2>
+		<div class="flex-column">
+			<p>
+				Please Upload a File ...
+			</p>
 			<form enctype="multipart/form-data" method="POST" action="/api/fileanalyse">
 				<input id="inputfield" type="file" name="upfile">
 				<input id="button" type="submit" value="Upload">
 			</form>
-		</div>
-	</div>
-	<div class="footer">
-		<p>
-			by
-			<a href="http://www.freecodecamp.com">freeCodeCamp</a>
-		</p>
+		</div>	
 	</div>
 </body>
 
